tests/ui/repeat-expr/copy-check-deferred-after-fallback.stderr
error[E0282]: type annotations needed for `[Foo<{integer}>; _]`
  --> $DIR/copy-check-deferred-after-fallback.rs:37:9
   |
LL |     let b = [Foo(PhantomData); _];
   |         ^    ---------------- type must be known at this point
   |
note: type must be known for type parameter in this
  --> $DIR/copy-check-deferred-after-fallback.rs:32:1
   |
LL | fn tie_and_make_goal<const N: usize, T: Trait<N>>(_: &T, _: &[Foo<T>; N]) {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: consider giving `b` an explicit type, where the value of const parameter `N` is specified
   |
LL |     let b: [Foo<{integer}>; N] = [Foo(PhantomData); _];
   |          +++++++++++++++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0282`.
